@@ -3,28 +3,31 @@ use warnings;
 
 use Module::Build::WithXSpp;
 
-sub testing { $ENV{AUTOMATED_TESTING} || $ENV{PERL_CPAN_REPORTER_CONFIG}
-                                      || $ENV{PERL5_CPANPLUS_IS_VERSION} }
-sub whimper { print {*STDOUT} $_[ 0 ]."\n"; exit 0 }
-
+my $testing  = sub { $ENV{AUTOMATED_TESTING}
+                  || $ENV{PERL_CPAN_REPORTER_CONFIG}
+                  || $ENV{PERL5_CPANPLUS_IS_VERSION} };
+my $whimper  = sub { print {*STDOUT} $_[ 0 ]."\n"; exit 0 };
 my $perl_ver = ##{ $meta2{prereqs}->{runtime}->{requires}->{perl} ##};
 my $name     = '##{ $zilla->name ##}'; $name =~ s{ - }{::}gmx;
 my $prereqs  = {
 ##{ $plugin->get_prereqs( 1 ) ##}
 };
-
-if ($] < $perl_ver) {
-   # Not interested in reports below min perl ver or unsupported platforms
-   testing or whimper "Minimum required Perl version is ${perl_ver}";
+my $stop     = sub {
+   $testing->() or $whimper->( $_[ 0 ] );
    $prereqs->{build_requires} = { %{ $prereqs->{configure_requires} } };
    $prereqs->{build_requires}->{ 'Test::Requires' } = 0.06;
    delete $prereqs->{requires};
-}
+};
+
+# Not interested in reports on unsupported platforms
+lc $^O ne 'linux' and $stop->( 'OS unsupported' );
+# Not interested in reports below min perl ver
+$] < $perl_ver    and $stop->( "Minimum required Perl version is ${perl_ver}" );
 
 Module::Build::WithXSpp->subclass( code => do { local $/; <DATA> } )->new(
    'extra_linker_flags' => [ '-lapt-pkg' ],
    'module_name' => $name,
-   'notes' => { min_perl_version => $perl_ver, testing => testing },
+   'notes' => { min_perl_version => $perl_ver, testing => $testing->() },
    %{ $prereqs },
 ##{ $plugin->get_default('share_dir') ##}
 )->create_build_script;
@@ -46,8 +49,10 @@ sub ACTION_code {
 EOS
 
    $self->notes( have_required_libs => $success );
-
-   return $success ? $self->SUPER::ACTION_code( @args ) : 1;
+   $success and return $self->SUPER::ACTION_code( @args );
+   $self->notes( 'testing' ) and return 1;
+   print {*STDOUT} "Required OS native packages missing; libapt-pkg-dev\n";
+   exit 0;
 }
 
 sub ACTION_generate_main_xs {
