@@ -12,15 +12,16 @@ use Test::Requires { version => 0.88 };
 use Module::Build;
 use Sys::Hostname;
 
-my $builder; my $notes = {}; my $perl_ver;
+my $builder; my $notes; my $perl_ver;
 
 BEGIN {
-   $builder   = eval { Module::Build->current };
-   $builder and $notes = $builder->notes;
-   $perl_ver  = $notes->{min_perl_version} || 5.008;
-   lc $OSNAME ne 'linux' and plan skip_all => 'OS unsupported';
+   $builder  = eval { Module::Build->current };
+   $notes    = $builder ? $builder->notes : {};
+   $perl_ver = $notes->{min_perl_version} || 5.008;
+   $notes->{testing} and lc $OSNAME ne 'linux'
+                     and plan skip_all => 'OS unsupported';
    $notes->{testing} and not $notes->{have_required_libs}
-                         and plan skip_all => 'Required libs not found';
+                     and plan skip_all => 'Required libs not found';
 }
 
 use Test::Requires "${perl_ver}";
